--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,7 @@
       <ul class="catalog__list">
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
               <span class="card-product__packaging-pro">500 г</span>
@@ -60,7 +60,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
               <span class="card-product__packaging-pro">1000 г</span>
@@ -84,7 +84,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
               <span class="card-product__packaging-pro">500 г</span>
@@ -108,7 +108,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
               <span class="card-product__packaging-pro">1000 г</span>
@@ -132,7 +132,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
               <span class="card-product__packaging-slim">500 г</span>
@@ -156,7 +156,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
               <span class="card-product__packaging-slim">1000 г</span>
@@ -180,7 +180,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <a href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
+            <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
               <span class="card-product__packaging-slim">500 г</span>
