--- a/source/program-form.html
+++ b/source/program-form.html
@@ -80,31 +80,31 @@
             </ul>
           </fieldset>
         </div>
-        <fieldset class="picking-program__fieldset">
-          <legend class="picking-program__legend">Контактные данные (владельца кота)</legend>
+        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
+          <legend class="picking-program__legend-contacts">Контактные данные (владельца кота)</legend>
           <ul class="picking-program__list-contacts">
             <li class="picking-program__item">
               <label class="picking-program__label label"><span>E-mail:<sup>*</sup></span>
-                <input class="picking-program__input-text input-text input input-text--icon" type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM">
+                <input class="picking-program__input-text input input--icon-mail" type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM">
               </label>
             </li>
             <li class="picking-program__item">
               <label class="picking-program__label label"><span>Телефон:<sup>*</sup></span>
-                <input class="picking-program__input-text input-text input input-text--icon" type="tel" name="tel" placeholder="8 (960)900 60 90">
+                <input class="picking-program__input-text input input--icon-phone" type="tel" name="tel" placeholder="8 (960)900 60 90">
               </label>
             </li>
           </ul>
         </fieldset>
-        <fieldset class="picking-program__fieldset">
-          <legend class="picking-program__legend">Комментарий</legend>
+        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
+          <legend class="picking-program__legend-comment">Комментарий</legend>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <textarea class="picking-program__textarea" name="comment" rows="6" placeholder="Расскажите обо всех повадках кота"></textarea>
+              <textarea class="picking-program__textarea" name="comment" rows="7" placeholder="Расскажите обо всех повадках кота"></textarea>
             </li>
           </ul>
         </fieldset>
-        <fieldset class="picking-program__fieldset">
-          <legend class="picking-program__legend">Дополнительно</legend>
+        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
+          <legend class="picking-program__legend-additionally">Дополнительно</legend>
           <ul class="picking-program__list-additionally">
             <li class="picking-program__item">
               <label class="picking-program__label-toogle label">
@@ -146,7 +146,7 @@
         <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="contacts__map map">
-        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+        <img class="map__image" src="http://via.placeholder.com/320x365" width="320" height="365" alt="Карта">
       </div>
     </section>
   </main>
@@ -168,8 +168,7 @@
       </ul>
     </section>
     <section class="page-footer__copyright copyright">
-      <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </section>
   </footer>
 
