--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,13 @@
 
   <div class="banner-wrap">
     <header class="page-header">
-      <a class="page-header__logo">
-        <picture>
-          <source media="(min-width: 1300px)" src="img/logo-mobile-header.svg" width="202" height="59">
-          <source media="(min-width: 768px)" src="img/logo-mobile-header.svg" width="173" height="58">
+      <div class="page-header__wrap-logo">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
           <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
-        </picture>
-      </a>
-      <nav class="main-nav">
+        </a>
+      </div>
+      <nav class="main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active site-list__item--active-white">
