--- a/source/index.html
+++ b/source/index.html
@@ -108,32 +108,36 @@
   <section class="contacts">
     <div class="contacts__cooperation">
       <b>Приглашаем <br> к сотрудничеству дилеров!</b>
-      <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="contacts__add">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
     </div>
     <div class="contacts__map map">
     </div>
   </section>
 
-  <footer class="page-footer">
-    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
-    <section class="page-footer__social social">
-      <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
-        </li>
-      </ul>
-    </section>
-    <section class="page-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-    </section>
-  </footer>
+  <div class="page-footer__wrap">
+    <footer class="page-footer">
+      <div class="page-footer__logo-wrap">
+        <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
+      </div>
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </section>
+    </footer>
+  </div>
 
   <script src="js/script-menu-mobile.js"></script>
 
