--- a/source/program-form.html
+++ b/source/program-form.html
@@ -9,10 +9,12 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
-      <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
-    </a>
+    <div class="page-header__wrap-logo">
+      <a class="page-header__logo" href="index.html">
+        <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+        <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
+      </a>
+    </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
@@ -158,33 +160,36 @@
   <section class="contacts">
     <div class="contacts__cooperation">
       <b>Приглашаем <br> к сотрудничеству дилеров!</b>
-      <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="contacts__add">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
     </div>
     <div class="contacts__map map">
-      <img class="map__image" src="http://via.placeholder.com/320x365" width="320" height="365" alt="Карта">
     </div>
   </section>
 
-  <footer class="page-footer">
-    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
-    <section class="page-footer__social social">
-      <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
-        </li>
-      </ul>
-    </section>
-    <section class="page-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-    </section>
-  </footer>
+  <div class="page-footer__wrap">
+    <footer class="page-footer">
+      <div class="page-footer__logo-wrap">
+        <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
+      </div>
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </section>
+    </footer>
+  </div>
 
   <script src="js/script-menu-mobile.js"></script>
 
