--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,8 +35,8 @@
     <h1 class="catalog-main__heading-page">Каталог продукции</h1>
     <section class="catalog">
       <ul class="catalog__list">
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
@@ -59,8 +59,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
@@ -83,8 +83,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
@@ -107,8 +107,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
@@ -131,8 +131,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
@@ -155,8 +155,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
@@ -179,8 +179,8 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product">
-          <article class="card-product__item">
+        <li class="catalog__item">
+          <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
               <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
@@ -203,7 +203,7 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
-        <li class="catalog__item card-product more-products">
+        <li class="catalog__item more-products">
           <b class="more-product__all-goods">Показать еще 100500 товаров</b>
           <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
           <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
