--- a/source/program-form.html
+++ b/source/program-form.html
@@ -35,118 +35,98 @@
     <h1 class="program-form-main__heading-page">Подбор программы</h1>
     <section class="picking-program">
       <p class="picking-program__text">Заполните анкету и мы подберем программу питания для Вашего кота</p>
-      <form class="picking-program__form" method="get" action="https://echo.htmlacademy.ru">
-        <div class="picking-program__fieldset-wrapper">
-          <fieldset class="picking-program__fieldset">
-            <legend class="visually-hidden">Общие данные</legend>
-            <ul class="picking-program__list-name">
-              <li class="picking-program__item">
-                <label class="picking-program__label label"><span>Имя:<sup>*</sup></span>
-                  <input class="picking-program__input-text input-text input" type="text" name="name" placeholder="Барсик">
-                </label>
-              </li>
-              <li class="picking-program__item">
-                <label class="picking-program__label label"><span>Вес (кг):<sup>*</sup></span>
-                  <input class="picking-program__input-text input-text input" type="text" name="heft" placeholder="7">
-                </label>
-              </li>
-              <li class="picking-program__item">
-                <label class="picking-program__label label"><span>Возраст (лет):</span>
-                  <input class="picking-program__input-text input-text input" type="text" name="age" placeholder="7">
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="picking-program__fieldset">
-            <legend class="visually-hidden">Цель программы</legend>
-            <ul class="picking-program__list-categories">
-              <li class="picking-program__item">
-                <p>
-                  <label class="radio">
-                    <input class="visually-hidden radio__control" type="radio" name="radio">
-                    <span class="radio__label label">Похудение</span>
-                  </label>
-                </p>
-              </li>
-              <li class="picking-program__item">
-                <p>
-                  <label class="radio">
-                    <input class="visually-hidden radio__control" type="radio" name="radio">
-                    <span class="radio__label label">Набор массы</span>
-                  </label>
-                </p>
-              </li>
-              <li class="picking-program__item">
-                <p>
-                  <label class="radio">
-                    <input class="visually-hidden radio__control" type="radio" name="radio">
-                    <span class="radio__label label">Не знаю (нужен Ваш совет)</span>
-                  </label>
-                </p>
-              </li>
-            </ul>
-          </fieldset>
+      <form class="program-order" method="get" action="https://echo.htmlacademy.ru">
+        <div class="program-order__fieldset-wrap">
+          <div class="program-order__fieldset program-order__fieldset--info">
+            <h2 class="visually-hidden">Общие данные</h2>
+            <p class="program-order__field">
+              <label class="input"><span class="label">Имя:<sup>*</sup></span>
+                <input class="input__control" type="text" name="name" placeholder="Барсик">
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="input"><span class="label">Вес (кг):<sup>*</sup></span>
+                <input class="input__control" type="text" name="name" placeholder="7">
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="input"><span class="label">Возраст (лет):</span>
+                <input class="input__control" type="text" name="name" placeholder="7">
+              </label>
+            </p>
+          </div>
+          <div class="program-order__fieldset program-order__fieldset--type">
+            <h2 class="visually-hidden">Цель программы</h2>
+            <p class="program-order__field">
+              <label class="radio">
+                <input class="visually-hidden radio__control" type="radio" name="radio">
+                <span class="radio__label label">Похудение</span>
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="radio">
+                <input class="visually-hidden radio__control" type="radio" name="radio">
+                <span class="radio__label label">Набор массы</span>
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="radio">
+                <input class="visually-hidden radio__control" type="radio" name="radio">
+                <span class="radio__label label">Не знаю (нужен Ваш совет)</span>
+              </label>
+            </p>
+          </div>
         </div>
-        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
-          <legend class="picking-program__legend-contacts">Контактные данные (владельца кота)</legend>
-          <ul class="picking-program__list-contacts">
-            <li class="picking-program__item">
-              <label class="picking-program__label label"><span>E-mail:<sup>*</sup></span>
-                <input class="picking-program__input-text input input--icon-mail" type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM">
+        <div class="program-order__fieldset">
+          <h2 class="program-order__legend">Контактные данные (владельца кота)</h2>
+          <div class="program-order__fieldset--contacts">
+            <p class="program-order__field">
+              <label class="input"><span class="label">E-mail:<sup>*</sup></span>
+                <input class="input__control" type="text" name="name" placeholder="KUKLACHEV@GMAIL.COM">
               </label>
-            </li>
-            <li class="picking-program__item">
-              <label class="picking-program__label label"><span>Телефон:<sup>*</sup></span>
-                <input class="picking-program__input-text input input--icon-phone" type="tel" name="tel" placeholder="8 (960)900 60 90">
+            </p>
+            <p class="program-order__field">
+              <label class="input"><span class="label">Телефон:<sup>*</sup></span>
+                <input class="input__control" type="text" name="name" placeholder="8 (960)900 60 90">
               </label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
-          <legend class="picking-program__legend-comment">Комментарий</legend>
-          <ul class="picking-program__list">
-            <li class="picking-program__item">
-              <textarea class="picking-program__textarea" name="comment" rows="7" placeholder="Расскажите обо всех повадках кота"></textarea>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="picking-program__fieldset picking-program__fieldset--line-green">
-          <legend class="picking-program__legend-additionally">Дополнительно</legend>
-          <ul class="picking-program__list-additionally">
-            <li class="picking-program__item-additionally">
-              <p>
-                <label class="checkbox">
-                  <input class="visually-hidden checkbox__control" type="checkbox" name="sweetener">
-                  <span class="checkbox__label label">Сахарозаменитель</span>
-                </label>
-              </p>
-            </li>
-            <li class="picking-program__item-additionally">
-              <p>
-                <label class="checkbox">
-                  <input class="visually-hidden checkbox__control" type="checkbox" name="water">
-                  <span class="checkbox__label label">Питьевая вода</span>
-                </label>
-              </p>
-            </li>
-            <li class="picking-program__item-additionally">
-              <p>
-                <label class="checkbox">
-                  <input class="visually-hidden checkbox__control" type="checkbox" name="milk">
-                  <span class="checkbox__label label">Молоко</span>
-                </label>
-              </p>
-            </li>
-            <li class="picking-program__item-additionally">
-              <p>
-                <label class="checkbox">
-                  <input class="visually-hidden checkbox__control" type="checkbox" name="vitamins">
-                  <span class="checkbox__label label">Витамины</span>
-                </label>
-              </p>
-            </li>
-          </ul>
-        </fieldset>
+            </p>
+          </div>
+        </div>
+        <div class="program-order__fieldset program-order__fieldset--comment">
+          <h2 class="program-order__legend">Комментарий</h2>
+          <p class="program-order__field">
+            <textarea class="textarea" name="comment" rows="7" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </p>
+        </div>
+        <div class="program-order__fieldset">
+          <h2 class="program-order__legend">Дополнительно</h2>
+          <div class="program-order__fieldset--additional">
+            <p class="program-order__field">
+              <label class="checkbox">
+                <input class="visually-hidden checkbox__control" type="checkbox" name="sweetener">
+                <span class="checkbox__label label">Сахарозаменитель</span>
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="checkbox">
+                <input class="visually-hidden checkbox__control" type="checkbox" name="water">
+                <span class="checkbox__label label">Питьевая вода</span>
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="checkbox">
+                <input class="visually-hidden checkbox__control" type="checkbox" name="milk">
+                <span class="checkbox__label label">Молоко</span>
+              </label>
+            </p>
+            <p class="program-order__field">
+              <label class="checkbox">
+                <input class="visually-hidden checkbox__control" type="checkbox" name="vitamins">
+                <span class="checkbox__label label">Витамины</span>
+              </label>
+            </p>
+          </div>
+        </div>
         <div class="picking-program__wrapper-button">
           <button class="picking-program__button button">Отправить заявку</button>
           <small class="picking-program__footnote">
